--- a/site stream/index.html
+++ b/site stream/index.html
@@ -7,6 +7,68 @@
     <title>Streamns da minha vida</title>
 </head>
 <body>
-    
+<h1>Streans da ninha vida</h1>
+    <table>
+        <tr>
+            <td>NetFlix</td>
+        </tr>
+
+        <tr>
+            <td>Pluto TV</td>
+        </tr>
+
+        <tr>
+            <td>Prime Vídeo</td>
+        </tr>
+
+        <tr>
+            <td></td>
+        <tr>
+             <td>Play</td>
+        </tr>
+
+        <tr>
+            <td>Telecine Play</td>
+        </tr>
+
+        <tr>
+            <td>HBO GO</td>
+        </tr>
+
+        <tr>
+            <td>Starzplay</td>
+        </tr>
+
+        <tr>
+            <td>YouTube </td>
+        </tr>
+
+        <tr>
+            <td>Apple Tv</td>
+        </tr>
+
+        <tr>
+            <td>Now</td>
+        </tr>
+
+        <tr>
+            <td>PlayPlus</td>
+        </tr>
+
+        <tr>
+            <td>Oldflix</td>
+        </tr>
+
+        <tr>
+            <td>Google Vídeo</td>
+        </tr>
+
+        <tr>
+            <td></td>
+        </tr>
+
+</table>
+
+
 </body>
 </html>
