--- a/site stream/index.html
+++ b/site stream/index.html
@@ -4,31 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Streamns da minha vida</title>
+    <title>Streams da minha vida</title>
 </head>
 <body>
-<h1>Streans da ninha vida</h1>
+<h1>Streams da ninha vida</h1>
     <table>
+        <thead>
+            <tr>
+            <th>Stream</th>
+            <th>Preço</th>
+            <th>Telas por vez</th>
+            <th>Dispositivos cadastrados</th>
+            <th>Perfis</th>]
+            <th>Perfil Kids</th>
+            <ht>Controle parental</ht>
+            </tr>
+        </thead>
+        
         <tr>
             <td>NetFlix</td>
+            <td>R$21,90, R$32,90 e R$45,90</td>
         </tr>
 
         <tr>
             <td>Pluto TV</td>
+            <td>Grátis</td>
         </tr>
 
         <tr>
             <td>Prime Vídeo</td>
+            <td>R$9,90</td>
         </tr>
 
-        <tr>
-            <td></td>
-        <tr>
-             <td>Play</td>
-        </tr>
+        <tr>     
 
         <tr>
             <td>Telecine Play</td>
+            <td>R$37,90</td>
         </tr>
 
         <tr>
@@ -37,10 +49,11 @@
 
         <tr>
             <td>Starzplay</td>
+            <td>R$9,90 / mês por 6 meses</td>
         </tr>
 
         <tr>
-            <td>YouTube </td>
+            <td>YouTube GO </td>
         </tr>
 
         <tr>
@@ -53,6 +66,7 @@
 
         <tr>
             <td>PlayPlus</td>
+            
         </tr>
 
         <tr>
@@ -64,7 +78,11 @@
         </tr>
 
         <tr>
-            <td></td>
+            <td>Globo Play</td>
+        </tr>
+
+        <tr>
+            <td>ParamountPluz</td>
         </tr>
 
 </table>
