--- a/site stream/index.html
+++ b/site stream/index.html
@@ -17,7 +17,7 @@
             <th>Dispositivos cadastrados</th>
             <th>Perfis</th>]
             <th>Perfil Kids</th>
-            <ht>Controle parental</ht>
+            <th>Controle parental</th>
             </tr>
         </thead>
         
@@ -45,6 +45,7 @@
 
         <tr>
             <td>HBO GO</td>
+            <td>R$34,90</td>
         </tr>
 
         <tr>
@@ -53,11 +54,13 @@
         </tr>
 
         <tr>
-            <td>YouTube GO </td>
+            <td>YouTube GO</td>
+            <td>R$21,90 Indivitual ou 31,90 Família</td>
         </tr>
 
         <tr>
-            <td>Apple Tv</td>
+            <td>Apple Tv+</td>
+            <td>R$9,90</td>
         </tr>
 
         <tr>
@@ -66,11 +69,13 @@
 
         <tr>
             <td>PlayPlus</td>
+            <td>Grátis, R$12,90 e R$32,80</td>
             
         </tr>
 
         <tr>
             <td>Oldflix</td>
+            <td>R$12,90, R$14,90 e R$16,90</td>
         </tr>
 
         <tr>
@@ -79,10 +84,17 @@
 
         <tr>
             <td>Globo Play</td>
+            <td>Gratis, R$22,90, R$43,90, R$84,90 e R$49,90 tem vários combinações</td>
         </tr>
 
         <tr>
             <td>ParamountPluz</td>
+            <td>R$19,90</td>
+        </tr>
+
+        <tr>
+            <td>DirecTv GO</td>
+            <td>A partir de 59,90</td>
         </tr>
 
 </table>
