--- a/site stream/index.html
+++ b/site stream/index.html
@@ -15,11 +15,12 @@
             <th>Preço</th>
             <th>Telas por vez</th>
             <th>Dispositivos cadastrados</th>
-            <th>Perfis</th>]
+            <th>Perfis</th>
             <th>Perfil Kids</th>
             <th>Controle parental</th>
             </tr>
         </thead>
+    
         
         <tr>
             <td>NetFlix</td>
@@ -95,6 +96,11 @@
         <tr>
             <td>DirecTv GO</td>
             <td>A partir de 59,90</td>
+        </tr>
+
+        <tr>
+            <td>Vix</td>
+            <td>Grátis</td>
         </tr>
 
 </table>
