--- a/site stream/index.html
+++ b/site stream/index.html
@@ -25,16 +25,29 @@
         <tr>
             <td>NetFlix</td>
             <td>R$21,90, R$32,90 e R$45,90</td>
+            <td>1, 2 ou 4</td>
+            <td>5</td>
+            <td>Sim</td>
         </tr>
 
         <tr>
             <td>Pluto TV</td>
             <td>Grátis</td>
+            <td>Ilimitado</td>
+            <td>Ilimitado</td>
+            <td>Por conta</td>
+            <td>Não</td>
+            <td>Não</td>
         </tr>
 
         <tr>
             <td>Prime Vídeo</td>
             <td>R$9,90</td>
+            <td>3</td>
+            <td>x</td>
+            <td></td>
+            <td>Sim</td>
+            <td>Não</td>
         </tr>
 
         <tr>     
@@ -56,7 +69,7 @@
 
         <tr>
             <td>YouTube GO</td>
-            <td>R$21,90 Indivitual ou 31,90 Família</td>
+            <td>R$21,90 Indivitual ou<br> 31,90 Família</td>
         </tr>
 
         <tr>
@@ -85,7 +98,7 @@
 
         <tr>
             <td>Globo Play</td>
-            <td>Gratis, R$22,90, R$43,90, R$84,90 e R$49,90 tem vários combinações</td>
+            <td>Gratis, R$22,90, R$43,90,<br>R$84,90 e R$49,90 tem vários <br>combinações</td>
         </tr>
 
         <tr>
