--- a/site stream/index.html
+++ b/site stream/index.html
@@ -112,6 +112,14 @@
             <td>Grátis</td>
         </tr>
 
+        <tr>
+            <td>Combate</td>
+        </tr>
+
+        <tr>
+            <td>Premiere</td>
+        </tr>
+
 </table>
 
 
