--- a/site stream/index.html
+++ b/site stream/index.html
@@ -120,6 +120,22 @@
             <td>Premiere</td>
         </tr>
 
+        <tr>
+            <td>UOL Play</td>
+            <td>R$15,90, R$49,90 e R$69,90</td>
+        </tr>
+
+        <tr>
+            <td>Looke</td>
+            <td>R$16,90</td>
+            <td>3</td>
+        </tr>
+
+        <tr>
+            <td>Claro Vídeo</td>
+            <Td>R$19,90</Td>
+        </tr>
+
 </table>
 
 
