--- a/site stream/index.html
+++ b/site stream/index.html
@@ -136,6 +136,12 @@
             <Td>R$19,90</Td>
         </tr>
 
+        <tr>
+            <td>Oi Play</td>
+            <td>R$ 19,90 e R$49,90</td>
+        </tr>
+
+
 </table>
 
 
