--- a/site stream/index.html
+++ b/site stream/index.html
@@ -141,6 +141,11 @@
             <td>R$ 19,90 e R$49,90</td>
         </tr>
 
+        <tr>
+            <td>Tubi TV</td>
+            <td>Grátis</td>
+        </tr>
+
 
 </table>
 
