--- a/site stream/index.html
+++ b/site stream/index.html
@@ -7,7 +7,7 @@
     <title>Streams da minha vida</title>
 </head>
 <body>
-<h1>Streams da ninha vida</h1>
+<h1>Streams da minha vida</h1>
     <table>
         <thead>
             <tr>
