--- a/site stream/index.html
+++ b/site stream/index.html
@@ -18,6 +18,7 @@
             <th>Perfis</th>
             <th>Perfil Kids</th>
             <th>Controle parental</th>
+            <th>Aluguel</th>
             </tr>
         </thead>
     
