--- a/site stream/index.html
+++ b/site stream/index.html
@@ -21,11 +21,10 @@
             <th>Aluguel</th>
             </tr>
         </thead>
-
         
         
         <tr>
-            <td><a hret="https://netflix.com"></a>NetFlix</td>
+            <td><a href="https://netflix.com"target=blank>NetFlix</td>
             <td>R$21,90, R$32,90 e R$45,90</td>
             <td>1, 2 ou 4</td>
             <td>5</td>
@@ -33,7 +32,7 @@
         </tr>
 
         <tr>
-            <td>Pluto TV</td>
+            <td><a href="https://pluto.tv"target=blank>Pluto TV</td>
             <td>Grátis</td>
             <td>Ilimitado</td>
             <td>Ilimitado</td>
@@ -43,7 +42,7 @@
         </tr>
 
         <tr>
-            <td>Prime Vídeo</td>
+            <td><a href="https://www.primevideo.com/"target=blank>Prime Vídeo</td>
             <td>R$9,90</td>
             <td>3</td>
             <td>x</td>
