--- a/site stream/index.html
+++ b/site stream/index.html
@@ -42,7 +42,7 @@
         </tr>
 
         <tr>
-            <td><a href="https://www.primevideo.com/"target=blank>Prime Vídeo</td>
+            <td><a href="https://www.primevideo.com"target=blank>Prime Vídeo</td>
             <td>R$9,90</td>
             <td>3</td>
             <td>x</td>
@@ -54,32 +54,32 @@
         <tr>     
 
         <tr>
-            <td>Telecine Play</td>
+            <td><a href="https://telecineplay.com.br"target=blank>Telecine Play</td>
             <td>R$37,90</td>
         </tr>
 
         <tr>
-            <td>HBO GO</td>
+            <td><a href="https://www.hbogo.com.br/"target=blank>HBO GO</td>
             <td>R$34,90</td>
         </tr>
 
         <tr>
-            <td>Starzplay</td>
+            <td><a href="https://www.starz.com/br/pt"target=blank>Starzplay</td>
             <td>R$9,90 / mês por 6 meses</td>
         </tr>
 
         <tr>
-            <td>YouTube GO</td>
+            <td><a href="https://www.youtube.com/channel/UCqVDpXKLmKeBU_yyt_QkItQ"target=blank>YouTube Originals</td>
             <td>R$21,90 Indivitual ou<br> 31,90 Família</td>
         </tr>
 
         <tr>
-            <td>Apple Tv+</td>
+            <td><a href="https://www.apple.com/br/tv/"target=blank>Apple Tv+</td>
             <td>R$9,90</td>
         </tr>
 
         <tr>
-            <td>Now</td>
+            <td><a href="https://www.nowonline.com.br/"target=blank>Now</td>
         </tr>
 
         <tr>
