--- a/site stream/index.html
+++ b/site stream/index.html
@@ -70,7 +70,7 @@
 
         <tr>
             <td><a href="https://www.youtube.com/channel/UCqVDpXKLmKeBU_yyt_QkItQ"target=blank>YouTube Originals</td>
-            <td>R$21,90 Indivitual ou<br> 31,90 Família</td>
+            <td>R$21,90 Individual ou<br> 31,90 Família</td>
         </tr>
 
         <tr>
